# cliquematch

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: aarch64-wheels.yml  all-wheels.yml  wheels.yml  x86_64-wheels.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  how.rst  index.rst  refs.bib  setup.rst  user.rst
examples/: ccmm.py  molecule.py  speed.py  using_via_R.Rmd  using_via_R.md
mem_test/: .gitignore  Makefile  README.md  main.cpp  nwmain.cpp
src/cliquematch/: A2AGraph.py  A2LGraph.py  AlignGraph.py  IsoGraph.py  L2AGraph.py  L2LGraph.py  __init__.py  psgraph.py
src/cliquematch/cm_base/: cm_base.cpp
src/cliquematch/cm_base/core/: dfs.cpp  gbits.cpp  gbits.h  graph.cpp  graph.h  heuristic.cpp  mmio.cpp  mmio.h  other_dfs.cpp  pygraph.cpp  pygraph.h  vertex.cpp  vertex.h  wrap_pygraph.cpp
src/cliquematch/cm_base/ext/: A2Agraph.cpp  A2Agraph.h  A2Lgraph.cpp  A2Lgraph.h  L2Agraph.cpp  L2Agraph.h  (+4 more)
src/cliquematch/core/: clique.cpp  clique.h  core.cpp  core.h  dfs.cpp  dfs.h  dfs_recurse.cpp  dfs_stack.cpp  gbits.cpp  gbits.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  mmio.cpp  mmio.h  other_dfs.cpp  pygraph.cpp  pygraph.h  pyiterator.cpp  pyiterator.h  pynwgraph.cpp  pynwgraph.h  searchstate.cpp  searchstate.h  vertex.cpp  vertex.h  wrap_pygraph.cpp
src/cliquematch/deprecated/: eigrel.cpp  eigrel.h
src/cliquematch/detail/: clique.cpp  clique.h  dfs.h  dfs_recurse.cpp  dfs_stack.cpp  enumerate.cpp  gbits.cpp  gbits.h  graph.cpp  graph.h  heuristic.cpp  heuristic.h  mmio.cpp  mmio.h  searchstate.cpp  searchstate.h  utils.cpp  utils.h  vertex.cpp  vertex.h
src/cliquematch/ext/: A2Agraph.cpp  A2Agraph.h  A2Lgraph.cpp  A2Lgraph.h  Aligngraph.cpp  Aligngraph.h  Isograph.cpp  Isograph.h  L2Agraph.cpp  L2Agraph.h  L2Lgraph.cpp  L2Lgraph.h  eigen_distance.cpp  eigen_distance.hpp  eigen_wrap.h  ext.cpp
src/cliquematch/templates/: ext_template.h  ext_template.hpp  pair_dist.h  pair_dist.hpp  relset.h  relset.hpp  wrap_template.hpp
src/cliquematch/wrappers/: __init__.py  _gen_graph.py  a2agraph.py  a2lgraph.py  aligngraph.py  isograph.py  l2agraph.py  l2lgraph.py
tests/: graph_test.py  nwgraph_test.py  sample_read1a.mtx  sample_read1b.mtx  sample_read2.mtx  test_a2a.py  test_a2l.py  test_align.py  test_iso.py  test_l2a.py  test_l2l.py
tests/try/: try_basic.py  try_large.py  try_nwtx.py
travis/: build_wheels.sh  install.sh  script.sh  upload.sh
(+99 files in other folders)
