[build-system]
requires = ["setuptools>=61.0", "numpy>=1.14", "pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cliquematch"
version = "3.0.1"
authors = [
  { name="Gautham" },
]
description="Finding correspondence via maximum cliques in large graphs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ahgamut/cliquematch"
Issues = "https://github.com/ahgamut/cliquematch/issues"
