[build-system]
requires = ["setuptools>=61.0", "numpy>=1.14", "pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cliquematch"
dependencies = ["numpy>=1.14", "pybind11>=2.2"]
version = "3.0.1"
license = {file = "LICENSE"}
authors = [
  { name="Gautham" },
]
description="Finding correspondence via maximum cliques in large graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ahgamut/cliquematch"
Documentation = "https://cliquematch.rtfd.io"
Issues = "https://github.com/ahgamut/cliquematch/issues"
