[build-system]
requires = ["setuptools>=61.0", "numpy>=1.14", "pybind11>=2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cliquematch"
dependencies = ["numpy>=1.14", "pybind11>=2.2"]
version = "3.0.2"
license = "MIT"
authors = [
  { name="Gautham Venkatasubramanian", email="ahgamut@gmail.com" },
]
description="Finding correspondence via maximum cliques in large graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.cibuildwheel]
skip = ["cp36*", "cp3??t-*", "*musllinux*", "*win32*"]
before-build = ["pip install numpy>=1.14 pybind11>=2.2"]
build-frontend = "build"
enable = ["pypy"] # experimental
test-requires = "pytest"
test-command = "pytest -v {project}"


[project.urls]
Homepage = "https://github.com/ahgamut/cliquematch"
Documentation = "https://cliquematch.rtfd.io"
Issues = "https://github.com/ahgamut/cliquematch/issues"
